Vanilla JS challenge 졸업 작품

--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
             <script src="js/weather.js" defer></script>
             <script src="js/quotes.js" defer></script> 
             <script src="js/todo.js" defer></script>
+            <script src="js/music.js" defer></script>
         
         </body>
 </html>
